DM: updating readthedocs and requirements

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -28,4 +28,4 @@ python:
    install:
      - method: pip
        path: .
-     - requirements: requirements_dev.txt
+     - requirements: requirements.txt
